--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 	<script src="js/bootstrap.js"></script>
   </head>
-  	<h1> Hello world </h1>
+
+  	<div class="navbar navbar-inverse navbar-static-top">
+		<div class="container">
+			<a href="#" class="navbar-brand">Sleep Tracker</a>	
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+				^		
+			</button>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Home</a></li>	
+				</ul>
+			</div>
+		</div>
+
+	</div>
 
   <body>
 
