--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 		<div class="container">
 			<a href="#" class="navbar-brand">Sleep Tracker</a>	
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-				^		
+				<span class="icon-bar"></span>	
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Home</a></li>	
+					<li><a href="#">Stats</a></li>
+					<li><a href="#">Share</a></li>
 				</ul>
 			</div>
 		</div>
