--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 	<script src="js/bootstrap.js"></script>
   </head>
-
   	<div class="navbar navbar-inverse navbar-static-top">
 		<div class="container">
 			<a href="#" class="navbar-brand">Sleep Tracker</a>	
@@ -19,8 +18,15 @@
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>	
-					<li><a href="#">Stats</a></li>
+					<li class="active"><a href="#">Home</a></li>	
+					<li class ="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Stats</a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Over time</a></li>
+							<li><a href="#">Average</a></li>
+							<li><a href="#">Comparison</a></li> 
+						</ul>
+					</li>
 					<li><a href="#">Share</a></li>
 				</ul>
 			</div>
