--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 	<script src="js/bootstrap.js"></script>
   </head>
+
+  	<!--Nav bar-->
   	<div class="navbar navbar-inverse navbar-static-top">
 		<div class="container">
 			<a href="#" class="navbar-brand">Sleep Tracker</a>	
@@ -20,7 +22,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#">Home</a></li>	
 					<li class ="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Stats</a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Stats <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Over time</a></li>
 							<li><a href="#">Average</a></li>
@@ -33,6 +35,18 @@
 		</div>
 
 	</div>
+
+
+	<!--Footer-->
+	<div class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container">
+			<p class="navbar-text">By Carmina </p>
+			
+		</div>			
+	</div>
+
+
+
 
   <body>
 
