--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
 	</div>
 
 
-	<!--Footer-->
+	<!--Footer possibly not necessary-->
+	<!--
 	<div class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
 			<p class="navbar-text">By Carmina </p>
 			
 		</div>			
 	</div>
+	-->
 
 
 
