--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<title>Sleep Tracker</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
  	<link href="css/styles.css" rel="stylesheet">
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 	<script src="js/bootstrap.js"></script>
@@ -30,12 +30,16 @@
 						</ul>
 					</li>
 					<li><a href="#">Share</a></li>
+					<li><a href="#">Sign in</a></li>
 				</ul>
 			</div>
 		</div>
 
 	</div>
 
+
+
+	
 
 	<!--Footer possibly not necessary-->
 	<!--
