--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 	</div>
 
 
-
+ 	<!--Wrapper body-->
+	<div>
+		<!-- clock -->
+		<div style="margin: 15px 0px 0px; display: inline-block; text-align: center; width: 296px;"><noscript><div style="display: inline-block; padding: 2px 4px; margin: 0px 0px 5px; border: 1px solid rgb(204, 204, 204); text-align: center; background-color: transparent;"><a href="http://localtimes.info/North_America/United_States/New_York/New_York_Central_Park/" style="text-decoration: none; font-size: 13px; color: rgb(0, 202, 0);"><img src="http://localtimes.info/images/countries/us.png"="" border=0="" style="border:0;margin:0;padding:0"=""> New+York+Central+Park</a></div></noscript><script type="text/javascript" src="http://localtimes.info/clock.php?continent=North America&country=United States&province=New York&city=New York Central Park&cp1_Hex=00ca00&cp2_Hex=FFFFFF&cp3_Hex=000000&fwdt=296&ham=0&hbg=1&hfg=1&sid=0&mon=0&wek=0&wkf=0&sep=0&widget_number=1021"></script></div>
+	</div>
 	
 
 	<!--Footer possibly not necessary-->
