--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
  	<!--Wrapper body-->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<button>Sleep</button>
+			<div class="col-sm-4">
+				<button class="btn btn-primary btn-lg btn-block">Sleep</button>
 			</div>
-			<div class="col-md-3">
-				<button>Wake</button>
+			<div class="col-sm-4">
+				<button class="btn btn-primary btn-lg btn-block">Wake</button>
 			</div>
 		</div>
 		
