--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<button class="btn btn-primary btn-lg btn-block">Sleep</button>
+				<button class="btn btn-success btn-lg btn-block">Sleep</button>
 			</div>
 			<div class="col-sm-4">
-				<button class="btn btn-primary btn-lg btn-block">Wake</button>
+				<button class="btn btn-warning btn-lg btn-block">Wake</button>
 			</div>
 		</div>
 		
