fixed button padding

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   	<title>Sleep Tracker</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.css" rel="stylesheet">
- 	<link href="css/styles.css" rel="stylesheet">
+ 	<link href="styles.css" rel="stylesheet">
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 	<script src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="myjs.js"></script>
   </head>
-
   	<!--Nav bar-->
   	<div class="navbar navbar-inverse navbar-static-top">
 		<div class="container">
@@ -41,10 +41,10 @@
  	<!--Wrapper body-->
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-4">
-				<button class="btn btn-success btn-lg btn-block">Sleep</button>
+			<div class="col-sm-4 top-buffer">
+				<button class="btn btn-primary btn-lg btn-block">Sleep</button>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 top-buffer">
 				<button class="btn btn-warning btn-lg btn-block">Wake</button>
 			</div>
 		</div>
