--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
  	<!--Wrapper body-->
 	<div class="container">
 		<div class="row">
+			<p class="text-center sleep-status-text">Sleep mode off</p>
+		</div>
+		<div class="col-xs-11 center-block" style="float:none">
+		<div class="row">
 			<div class="col-sm-4 top-buffer">
 				<button class="btn btn-primary btn-lg btn-block">Sleep</button>
 			</div>
 			<div class="col-sm-4 top-buffer">
 				<button class="btn btn-warning btn-lg btn-block">Wake</button>
 			</div>
+		</div>
 		</div>
 		
 	</div>
