--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="col-xs-12 center-block" style="float:none">
 		<div class="row">
 			<div class="col-sm-4 top-buffer">
-				<button onclick="toggleSleepMode()" class="btn btn-primary btn-lg btn-block">Sleep</button>
+				<button class="btn btn-primary btn-lg btn-block">Sleep</button>
 			</div>
 			<div class="col-sm-4 top-buffer">
 				<button class="btn btn-warning btn-lg btn-block">Wake</button>
