removed body tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script type="text/javascript" src="js/myjs.js"></script>
   </head>
 
-	<body>
 
   	<!--Nav bar-->
   	<div class="navbar navbar-inverse navbar-static-top">
@@ -44,7 +43,7 @@
  	<!--Wrapper body-->
 	<div class="container">
 		<div class="row">
-			<p class="text-center" id="sleep-status-text">Sleep mode <span id="sleep-status-colored">off<span></p>
+			<p class="text-center" id="sleep-status-text">Sleep mode off<span></p>
 		</div>
 		<div class="col-xs-12 center-block" style="float:none">
 		<div class="row">
@@ -72,7 +71,6 @@
 	-->
 
 
-	</body>
 
 
 </html>
